--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = qqc2-desktop-style
-url = https://download.kde.org/stable/frameworks/5.49/qqc2-desktop-style-5.49.0.tar.xz
+url = https://download.kde.org/stable/frameworks/5.50/qqc2-desktop-style-5.50.0.tar.xz
 archives = 
 giturl = 
 
@@ -52,5 +52,5 @@ use_clang = false
 # configure build for lto
 use_lto = false
 # require package verification for build
-verify_required = false
+verify_required = true
 
