--- a/options.conf
+++ b/options.conf
@@ -2,7 +2,7 @@
 name = qqc2-desktop-style
 url = https://download.kde.org/stable/frameworks/5.56/qqc2-desktop-style-5.56.0.tar.xz
 archives = 
-giturl = 
+giturl = https://anongit.kde.org/qqc2-desktop-style.git
 
 [autospec]
 # build 32 bit libraries
