--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = qqc2-desktop-style
-url = https://download.kde.org/stable/frameworks/5.61/qqc2-desktop-style-5.61.0.tar.xz
+url = https://download.kde.org/stable/frameworks/5.62/qqc2-desktop-style-5.62.0.tar.xz
 archives = 
 giturl = https://anongit.kde.org/qqc2-desktop-style.git
 
@@ -33,6 +33,8 @@ insecure_build = false
 keepstatic = false
 # do not require autostart subpackage
 no_autostart = false
+# do not generate debuginfo for this package
+nodebug = false
 # disable stripping binaries
 nostrip = false
 # optimize build for size over speed
