--- a/options.conf
+++ b/options.conf
@@ -1,9 +1,10 @@
 [package]
 name = qqc2-desktop-style
-url = https://download.kde.org/stable/frameworks/5.67/qqc2-desktop-style-5.67.1.tar.xz
+url = https://download.kde.org/stable/frameworks/5.68/qqc2-desktop-style-5.68.0.tar.xz
 archives = 
 giturl = https://anongit.kde.org/qqc2-desktop-style.git
 domain = 
+alias = 
 
 [autospec]
 # build 32 bit libraries
