--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = qqc2-desktop-style
-url = https://download.kde.org/stable/frameworks/5.68/qqc2-desktop-style-5.68.0.tar.xz
+url = https://download.kde.org/stable/frameworks/5.69/qqc2-desktop-style-5.69.0.tar.xz
 archives = 
 giturl = https://anongit.kde.org/qqc2-desktop-style.git
 domain = 
@@ -39,6 +39,8 @@ no_autostart = false
 nodebug = false
 # disable stripping binaries
 nostrip = false
+# configure build also for openmpi
+openmpi = false
 # optimize build for size over speed
 optimize_size = false
 # set profile for pgo
