update giturl to gitlab repo
Signed-off-by: Patrick McCarty <patrick.mccarty@intel.com>

--- a/options.conf
+++ b/options.conf
@@ -2,7 +2,7 @@
 name = qqc2-desktop-style
 url = https://download.kde.org/stable/frameworks/5.71/qqc2-desktop-style-5.71.0.tar.xz
 archives = 
-giturl = https://anongit.kde.org/qqc2-desktop-style.git
+giturl = https://invent.kde.org/frameworks/qqc2-desktop-style.git
 domain = 
 alias = 
 
