--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = qqc2-desktop-style
-url = https://download.kde.org/stable/frameworks/5.115/qqc2-desktop-style-5.115.0.tar.xz
+url = https://download.kde.org/stable/frameworks/6.0/qqc2-desktop-style-6.0.0.tar.xz
 archives = 
 giturl = https://invent.kde.org/frameworks/qqc2-desktop-style.git
 domain = 
@@ -62,7 +62,7 @@ skip_tests = false
 # add .so files to the lib package instead of dev
 so_to_lib = false
 # configure build for apx
-use_apx = true
+use_apx = false
 # configure build for avx2
 use_avx2 = true
 # configure build for avx512
