--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = qqc2-desktop-style
-url = https://download.kde.org/stable/frameworks/6.13/qqc2-desktop-style-6.13.0.tar.xz
+url = https://download.kde.org/stable/frameworks/6.14/qqc2-desktop-style-6.14.0.tar.xz
 archives = 
 giturl = https://invent.kde.org/frameworks/qqc2-desktop-style.git
 domain = 
@@ -37,6 +37,8 @@ fast-math = false
 full-debug-info = false
 # optimize build for speed over size
 funroll-loops = false
+# require license subpackage for successful build
+has_license = true
 # set flags to smallest -02 flags possible
 insecure_build = false
 # do not remove static libraries
